--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,168 +1,303 @@
-/* @media screen and (max-width: 1320px) {
-    .header {
-        padding: 0 50px;
-    }
+@media screen and (max-width: 1320px) {
+  .header {
+    padding: 0 50px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
-    .header {
-        padding: 0 50px;
-    }
+  .header {
+    padding: 0 50px;
+  }
 }
 
-@media screen and (max-width: 992px) {    
-    .hamburger {
-        display: block;
-        cursor: pointer;
-    }
+@media screen and (max-width: 992px) {
+  p {
+    font-size: 16px;
+  }
 
-    .hamburger .line {
-        width: 30px;
-        height: 3px;
-        margin: 6px 0;
-        background: var(--title-color);
-    }
+  h1 {
+    font-size: 48px;
+  }
 
-    .nav-bar {
-        height: 0;
-        position: absolute;
-        top: 80px;
-        left: 0;
-        right: 0;
-        width: 100vw;
-        overflow: hidden;
-        background-color: var(--body-color);
-        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
-        transition: .6s;
-    }
+  h2 {
+    font-size: 36px;
+  }
 
-    .nav-bar ul {
-        display: block;
-        width: fit-content;
-        margin: 80px auto 0 auto;
-        text-align: center;
-        opacity: 0;
-        transition: .3s;
-    }
+  h3 {
+    font-size: 30px;
+  }
 
-    .nav-bar ul li a {
-        margin-bottom: 12px;
-        color: var(--title-color);
-    }
+  h4 {
+    font-size: 24px;
+  }
 
-    .nav-bar.activeloser {
-        height: 450px;
-    }
+  h5 {
+    font-size: 18px;
+  }
 
-    .nav-bar.activeloser ul {
-        opacity: 1;
-    }
+  h6 {
+    font-size: 16px;
+  }
 
-    .contact-input-2 {
-        width: 386px;
-    }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
 
-    .contact-input-3 {
-        width: 386px;
-    }
+  .hamburger .line {
+    width: 30px;
+    height: 3px;
+    margin: 6px 0;
+    background: var(--title-color);
+  }
 
-    .card-item {
-        width: 266px;
-    }
+  .nav-bar {
+    height: 0;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    overflow: hidden;
+    background-color: var(--body-color);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+    transition: 0.6s;
+  }
 
-    .footer-links {
-        display: grid;
-        gap: 10px;
-    }
+  .nav-bar ul {
+    display: block;
+    width: fit-content;
+    margin: 80px auto 0 auto;
+    text-align: center;
+    opacity: 0;
+    transition: 0.3s;
+  }
 
-    .footer-socials {
-        display: flex;
-    }
+  .nav-bar ul li a {
+    margin-bottom: 12px;
+    color: var(--title-color);
+  }
+
+  .nav-bar.activeloser {
+    height: 450px;
+  }
+
+  .nav-bar.activeloser ul {
+    opacity: 1;
+  }
+
+  .contact-input-2 {
+    width: 496px;
+  }
+
+  .contact-input-3 {
+    width: 496px;
+  }
+
+  .card-item {
+    width: 266px;
+  }
+
+  .footer-links {
+    display: grid;
+    gap: 10px;
+  }
+
+  .footer-socials {
+    display: flex;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .nav-btn {
-        display: none;
-    }
+  .nav-btn {
+    display: none;
+  }
 
-    .card-item {
-        margin-left: 0;
-        display: inline-block;
-    }
+  .card-item {
+    margin-left: 0;
+    display: inline-block;
+  }
+  p {
+    font-size: 14px;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  h5 {
+    font-size: 16px;
+  }
+
+  h6 {
+    font-size: 14px;
+  }
+
+  .contact-input-2 {
+    width: 300px;
+  }
+  .contact-input-3 {
+    width: 300px;
+  }
 }
 
 @media screen and (max-width: 680px) {
-    .footer-title {
-        font-weight: 600;
-        font-size: 21px;
-        line-height: 40px;
-        color: var(--body-color);
-    }
+  .footer-title {
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 40px;
+    color: var(--body-color);
+  }
 
-    .footer-links {
-        display: grid;
-        gap: 10px;
-    }
+  .footer-links {
+    display: grid;
+    gap: 10px;
+  }
+  p {
+    font-size: 12px;
+  }
+
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 26px;
+  }
+
+  h3 {
+    font-size: 22px;
+  }
+
+  h4 {
+    font-size: 18px;
+  }
+
+  h5 {
+    font-size: 14px;
+  }
+
+  h6 {
+    font-size: 12px;
+  }
 }
 
 @media screen and (max-width: 568px) {
-    .freelance-title {
-        font-weight: 600;
-        font-size: 27px;
-        line-height: 51px;
-        padding-bottom: 44px;
-        color: var(--body-color);
-    }
+  .freelance-title {
+    font-weight: 600;
+    font-size: 27px;
+    line-height: 51px;
+    padding-bottom: 44px;
+    color: var(--body-color);
+  }
 
-    .portfolio-img {
-        width: 100% !important;
-    }
+  .portfolio-img {
+    width: 100% !important;
+  }
 
-    .contact-form {
-        margin-left: 0;
-    }
+  .contact-form {
+    margin-left: 0;
+  }
 }
 
 @media screen and (max-width: 350px) {
-    .footer {
-        height: 248px;
-        margin-top: 60px;
-        padding: 3rem 0 3.5rem;
-        background: var(--main-color);
-        width: 461px;
-    }
+  .footer {
+    height: 248px;
+    margin-top: 60px;
+    padding: 3rem 0 3.5rem;
+    background: var(--main-color);
+    width: 461px;
+  }
 
-    .contact-input-2 {
-        width: 300px;
-    }
+  .contact-input-2 {
+    width: 300px;
+  }
 
-    .contact-input-3 {
-        width: 300px;
-    }
+  .contact-input-3 {
+    width: 100px;
+  }
 
-    .freelance {
-        width: 460px;
-        margin-top: 135px;
-        height: 333px;
-        background-color: var(--main-color);
-    }
+  .freelance {
+    width: 460px;
+    margin-top: 135px;
+    height: 333px;
+    background-color: var(--main-color);
+  }
 
-    .home-subtitle {
-        font-weight: 400;
-        font-size: 10px;
-        line-height: 28px;
-        margin-bottom: 48px;
-        color: var(--text-color);
-    }
+  .home-subtitle {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 28px;
+    margin-bottom: 48px;
+    color: var(--text-color);
+  }
 
-    .home-title {
-        font-weight: 500;
-        font-size: 43px;
-        line-height: 53px;
-        margin-bottom: 15px;
-    }
+  .home-title {
+    font-weight: 500;
+    font-size: 43px;
+    line-height: 53px;
+    margin-bottom: 15px;
+  }
 
-    .portfolio-img {
-        width: 135% !important;
-    }
-} */
+  .portfolio-img {
+    width: 135% !important;
+  }
+  p {
+    font-size: 10px;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+
+  h4 {
+    font-size: 14px;
+  }
+
+  h5 {
+    font-size: 12px;
+  }
+
+  h6 {
+    font-size: 10px;
+  }
+
+  .footer-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer-links {
+    display: flex;
+    margin-top: 30px;
+  }
+
+  .footer-links li {
+    margin-right: 10px;
+  }
+  .footer-socials {
+    display: none;
+  }
+}
